# tm-opt

./: .gitignore  CLAUDE.md  CONTEXT_AND_PLAN.md  PLAN.md  PROGRESS.md  README.md
agent/: AGENT_BRIEF.md  PROMPT_BUILD.md  PROMPT_EXPERIMENT.md
configs/: bench_prompts.json  canonical.lock.json  canonical_decode_heavy.json  canonical_prefill_heavy.json  parity_prompts.json
docs/: ARCHITECTURE.md  BASELINE_NOTES.md  LEDGER_SCHEMA.md  ROOFLINE.md
engine/: CMakeLists.txt
engine/include/tmopt/: config.h  kernels.h  kv_cache.h  scheduler.h
engine/kernels/: decode_attention.cu  fused_rmsnorm.cu  moe_grouped_gemm.cu  sconv.cu
engine/pyengine/: __init__.py  config.py  kv.py  loader.py  model.py  scheduler.py
engine/pyengine/kernels/: attn_global.py  attn_swa.py  moe_gate.py  moe_gemm.py  relbias.py  rmsnorm.py  sconv.py
engine/pyengine/tests/: test_triton_smoke.py
engine/src/: kv_cache.cpp  main.cpp  model_loader.cpp  scheduler.cpp  verify_config_main.cpp
experiments/: example_spec.json
harness/: benchmark.py  correctness.py  dispatcher.py  ledger.py  worker.py
scripts/: freeze_canonical.py  plat_trajectory.py  pod_init.sh  probe_goldens_path.py  ralph_build.sh  ralph_experiment.sh  run_sweep.sh  serve_vllm_baseline.sh  serve_vllm_bench.sh  setup_node.sh
